--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@types/supertest": "^2.0.12",
         "@types/swagger-jsdoc": "^6.0.1",
         "@types/swagger-ui-express": "^4.1.3",
+        "@types/validator": "^13.7.17",
         "@typescript-eslint/eslint-plugin": "^5.59.7",
         "@typescript-eslint/parser": "^5.59.7",
         "cz-conventional-changelog": "^3.3.0",
@@ -41,6 +42,7 @@
         "jest": "^29.5.0",
         "lint-staged": "^13.2.3",
         "prettier": "^2.8.8",
+        "prisma": "^5.0.0",
         "sucrase": "^3.32.0",
         "supertest": "^6.3.3",
         "ts-jest": "^29.1.0",
@@ -52,7 +54,8 @@
         "express": "^4.18.2",
         "fast-glob": "^3.2.12",
         "swagger-jsdoc": "^6.2.8",
-        "swagger-ui-express": "^4.6.3"
+        "swagger-ui-express": "^4.6.3",
+        "validator": "^13.9.0"
     },
     "config": {
         "commitizen": {
