--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "typescript": "^5.0.4"
     },
     "dependencies": {
+        "@prisma/client": "^5.0.0",
         "axios": "^1.4.0",
         "express": "^4.18.2",
         "fast-glob": "^3.2.12",
