--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "index.js",
     "scripts": {
         "start": "sucrase-node src/main/server.ts",
+        "dev":"ts-node-dev -r tsconfig-paths/register ./src/main/server.ts",
         "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
         "test:staged": "npm test -- findRelatedTests",
         "test:verbose": "jest --passWithNoTests --runInBand",
@@ -20,6 +21,7 @@
     "license": "GPL-3.0-or-later",
     "devDependencies": {
         "@types/axios": "^0.14.0",
+        "@types/bcrypt": "^5.0.0",
         "@types/express": "^4.17.17",
         "@types/jest": "^29.5.1",
         "@types/node": "^20.2.3",
@@ -52,6 +54,7 @@
     "dependencies": {
         "@prisma/client": "^5.0.0",
         "axios": "^1.4.0",
+        "bcrypt": "^5.1.0",
         "express": "^4.18.2",
         "fast-glob": "^3.2.12",
         "swagger-jsdoc": "^6.2.8",
